//code slide đã có cứ copy vào rồi sửa css là đc //để ảnh ở ngoài thẻ container sẽ ko bị lỗi và để width100#

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <script
+            src="https://code.jquery.com/jquery-1.12.4.js"
+            integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+            crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/slick.js" ></script>
+
 </head>
 <body>
        <div class="header">
@@ -90,7 +99,7 @@
             </div>
             <div class="row" >
                 <div class="caodanghanoi">CAO ĐẲNG HÀ NỘI 11 NGÀNH BAO GỒM</div>
-                <div class="col-xs-12 col-sm-5">
+                <div class="col-xs-12 col-sm-4">
                 <ul>
                 <li>Công nghệ kỹ thuật cơ khí</li>
                 <li>Hàn</li>
@@ -99,7 +108,7 @@
                 <li>CN kỹ thuật điện tử viễn thông</li>
             </ul>
             </div>
-                <div class="col-xs-12 col-sm-7">
+                <div class="col-xs-12 col-sm-8">
                 <ul>
                 <li>Điện tử viễn thông</li>
                 <li>Hàn</li>
@@ -188,6 +197,155 @@
         </div>
     </div>
 </div>
+       <!------------------------------------------------------------------------------------------------>
+       <section class="slide"> <!-- slide -->
+           <div class="container">
+               <div class="slide1">
+                   <div class="person">
+                       <div class="person-name">
+                           Bà  <strong>Hoàng Kim Ngân</strong> <br><span>Chủ tịch HĐQT CTY HTM</span>
+                       </div>
+                       <img src="images/image-kimngan.png" alt="">
+                       <div class="person-quote">
+                           “ Hiệp hội Doanh nghiệp vừa và nhỏ Thành phố Hà Nội luôn tin tưởng vào chất lượng đào tạo của trường. Hiệp hội cam kết sẽ song hành cùng với trường hỗ trợ việc làm cho các sinh viên sau khi ra trường  ”
+                       </div>
 
+                   </div>
+                   <div class="person">
+                       <div class="person-name">
+                           Bà  <strong>Hoàng Kim Ngân</strong> <br><span>Chủ tịch HĐQT CTY HTM</span>
+                       </div>
+                       <div class="person-quote">
+                           “ Hiệp hội Doanh nghiệp vừa và nhỏ Thành phố Hà Nội luôn tin tưởng vào chất lượng đào tạo của trường. Hiệp hội cam kết sẽ song hành cùng với trường hỗ trợ việc làm cho các sinh viên sau khi ra trường  ”
+                       </div>
+                       <img src="images/image-kimngan.png" alt="">
+                   </div>
+                   <div class="person">
+                       <div class="person-name">
+                           Ông <strong>Bùi Quý Vinh</strong> <br><span>GD HOÀNG ANH Media</span>
+                       </div>
+                       <div class="person-quote">
+                           “ Các bạn sinh viên trường có chuyên môn tốt, biết nhìn nhận và sử lý công việc rất nhanh và hiệu quả đặc biệt các bạn rất chăm chỉ và năng nổ trong các hoạt động đoàn và tập thể. Tôi đánh giá rất cao các bạn.  ”
+                       </div>
+                       <img src="images/image-quyvinh.png" alt="">
+                   </div>
+                   <div class="person">
+                       <div class="person-name">
+                           <strong>Nguyễn Trường Giang</strong>  <br><span>Cựu Sinh viên ngành CNTT </span>
+                       </div>
+                       <div class="person-quote">
+                           “Gắn bó với ngôi trường hơn ba năm đã cho em rất nhiều bài học và hành trang vững chắc trong công việc. Trường không chỉ đào tạo cho chúng e kiến thức chuyên môn về ngoại ngữ vững vàng còn hướng cho chúng e các hoạt động phát triển các kỹ năng mềm bổ ích khi ra trường.   ”
+                       </div>
+                       <img src="images/image-person3.png" alt="">
+                   </div>
+                   <div class="person">
+                       <div class="person-name">
+                           Bà <strong>KIM HOÀNG ANH</strong> <br><span>Cự Sinh viên khoa kê toán </span>
+                       </div>
+                       <div class="person-quote">
+                           “ Qua quá trình học tập và đào tạo tại trường em đã trang bị được cho mình đầy đủ kiến thức để làm hành trang khi đi làm việc. Hiện tại với những kiến thức mình đã có em vô cùng tự tin khi làm việc tại những doanh nghiệp lớn.  ”
+                       </div>
+                       <img src="http://tuyensinh2017.vn/images/9.png" alt="">
+                   </div>
+
+               </div>
+           </div>
+       </section> <!-- thiết lập thông số slide -->
+       <!-- -------------------------------tuyen sinh------------------------------------------------->
+       <div class="recruitment">
+           <div class="container">
+               <div class="recruitment-tittle">
+                   Thông tin tuyển sinh – Thông báo tuyển sinh
+               </div>
+               <div class="row recruit">
+                   <div class="col-xs-6 col-sm-3 ">
+                       <div class="image-recruit"><img src="images/image-recruit1.jpg" alt=""></div>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 thongbaochung">
+                       <div class="thongbao">Thông báo tuyển sinh năm 2017</div>
+                       <span>Khởi nghiệp là hoạt động có ảnh hưởng rất lớn đến sự phát triển nền kinh tế nước nhà. Với mong muốn tạo điều
+                           kiện cho sinh viên học hỏi các kiến thức cơ bản về khởi nghiệp</span>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 ">
+                       <div class="image-recruit"><img src="images/image-recruit1.jpg" alt=""></div>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 thongbaochung">
+                       <div class="thongbao">Thông báo tuyển sinh năm 2017</div>
+                       <span>Khởi nghiệp là hoạt động có ảnh hưởng rất lớn đến sự phát triển nền kinh tế nước nhà. Với mong muốn tạo điều
+                           kiện cho sinh viên học hỏi các kiến thức cơ bản về khởi nghiệp</span>
+                   </div>
+               </div>
+               <div class="row recruit">
+                   <div class="col-xs-6 col-sm-3 ">
+                       <div class="image-recruit"><img src="images/image-recruit1.jpg" alt=""></div>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 thongbaochung">
+                       <div class="thongbao">Thông báo tuyển sinh năm 2017</div>
+                       <span>Khởi nghiệp là hoạt động có ảnh hưởng rất lớn đến sự phát triển nền kinh tế nước nhà. Với mong muốn tạo điều
+                           kiện cho sinh viên học hỏi các kiến thức cơ bản về khởi nghiệp</span>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 ">
+                       <div class="image-recruit"><img src="images/image-recruit1.jpg" alt=""></div>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 thongbaochung">
+                       <div class="thongbao">Thông báo tuyển sinh năm 2017</div>
+                       <span>Khởi nghiệp là hoạt động có ảnh hưởng rất lớn đến sự phát triển nền kinh tế nước nhà. Với mong muốn tạo điều
+                           kiện cho sinh viên học hỏi các kiến thức cơ bản về khởi nghiệp</span>
+                   </div>
+               </div>
+               <div class="row recruit">
+                   <div class="col-xs-6 col-sm-3 ">
+                       <div class="image-recruit"><img src="images/image-recruit1.jpg" alt=""></div>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 thongbaochung">
+                       <div class="thongbao">Thông báo tuyển sinh năm 2017</div>
+                       <span>Khởi nghiệp là hoạt động có ảnh hưởng rất lớn đến sự phát triển nền kinh tế nước nhà. Với mong muốn tạo điều
+                           kiện cho sinh viên học hỏi các kiến thức cơ bản về khởi nghiệp</span>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 ">
+                       <div class="image-recruit"><img src="images/image-recruit1.jpg" alt=""></div>
+                   </div>
+                   <div class="col-xs-6 col-sm-3 thongbaochung">
+                       <div class="thongbao">Thông báo tuyển sinh năm 2017</div>
+                       <span>Khởi nghiệp là hoạt động có ảnh hưởng rất lớn đến sự phát triển nền kinh tế nước nhà. Với mong muốn tạo điều
+                           kiện cho sinh viên học hỏi các kiến thức cơ bản về khởi nghiệp</span>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <!---------------------------------------- end tuyen sinh------------------------------------------------------->
+       <script>
+           $('.slide1').slick({
+               dots: false,
+               infinite: true,
+               speed: 300,
+               arrows:true,
+               prevArrow: '<span class="glyphicon glyphicon-chevron-left"></span>',
+               nextArrow: '<span class="glyphicon glyphicon-chevron-right"></span>',
+               slidesToShow: 4,
+               slidesToScroll: 1,
+               responsive: [
+                   {
+                       breakpoint: 992,
+                       settings: {
+                           slidesToShow: 3,
+                           slidesToScroll: 1,
+                           infinite: true,
+                           dots: true
+                       }
+                   },
+                   {
+                       breakpoint: 768,
+                       settings: {
+                           slidesToShow: 1,
+                           slidesToScroll: 1
+                       }
+                   },
+                   // You can unslick at a given breakpoint now by adding:
+                   // settings: "unslick"
+                   // instead of a settings object
+               ]
+           });
+       </script>
 </body>
 </html>
