--- a/register-form.html
+++ b/register-form.html
@@ -76,5 +76,50 @@
     </div>
 </section> <!-- contact -->
 
+<section class="slide"> <!-- slide -->
+    <div class="container">
+        <div class="slide1">
+            <div class="person">
+                <div class="person-name">
+                    Bà  <strong>Hoàng Kim Ngân</strong> <br><span>Chủ tịch HĐQT CTY HTM</span>
+                </div>
+                <div class="person-quote">
+                    “ Hiệp hội Doanh nghiệp vừa và nhỏ Thành phố Hà Nội luôn tin tưởng vào chất lượng đào tạo của trường. Hiệp hội cam kết sẽ song hành cùng với trường hỗ trợ việc làm cho các sinh viên sau khi ra trường  ”
+                </div>
+                <img src="http://tuyensinh2017.vn/images/6.png" alt="">
+            </div>
+            <div class="person">
+                <div class="person-name">
+                    Ông <strong>Bùi Quý Vinh</strong> <br><span>GD HOÀNG ANH Media</span>
+                </div>
+                <div class="person-quote">
+                    “ Các bạn sinh viên trường có chuyên môn tốt, biết nhìn nhận và sử lý công việc rất nhanh và hiệu quả đặc biệt các bạn rất chăm chỉ và năng nổ trong các hoạt động đoàn và tập thể. Tôi đánh giá rất cao các bạn.  ”
+                </div>
+                <img src="http://tuyensinh2017.vn/images/7.png" alt="">
+            </div>
+            <div class="person">
+                <div class="person-name">
+                    <strong>Nguyễn Trường Giang</strong>  <br><span>Cựu Sinh viên ngành CNTT </span>
+                </div>
+                <div class="person-quote">
+                    “Gắn bó với ngôi trường hơn ba năm đã cho em rất nhiều bài học và hành trang vững chắc trong công việc. Trường không chỉ đào tạo cho chúng e kiến thức chuyên môn về ngoại ngữ vững vàng còn hướng cho chúng e các hoạt động phát triển các kỹ năng mềm bổ ích khi ra trường.   ”
+                </div>
+                <img src="http://tuyensinh2017.vn/images/8.png" alt="">
+            </div>
+            <div class="person">
+                <div class="person-name">
+                    Bà <strong>KIM HOÀNG ANH</strong> <br><span>Cự Sinh viên khoa kê toán </span>
+                </div>
+                <div class="person-quote">
+                    “ Qua quá trình học tập và đào tạo tại trường em đã trang bị được cho mình đầy đủ kiến thức để làm hành trang khi đi làm việc. Hiện tại với những kiến thức mình đã có em vô cùng tự tin khi làm việc tại những doanh nghiệp lớn.  ”
+                </div>
+                <img src="http://tuyensinh2017.vn/images/9.png" alt="">
+            </div>
+
+        </div>
+    </div>
+</section> <!-- slide -->
+
+
 </body>
 </html>
